[FIX] website_sale: fix overlapping terms & conditions
This commit fixes an issues about the terms & conditions overlapping the
rest of the content on the `website_sale` payment page.

Prior to this commit, the terms & conditions was positioned using a
`position-absolute` with a `bottom-0`, resulting in the element extending
to the topside if its content is very long. This led to some overlapping
issues with the others elements of the view.

To prevent this issue to happen, we position the element with a `top-100`
and remove the `<div>` that aimed to handle the spacing at the bottom.
We now manage this spacing with a utility class.

opw-4373853

closes odoo/odoo#191519

X-original-commit: 65b2bd6a81f6e498b10c4ec58fcbb260951852c3

--- a/addons/website_sale/static/src/scss/website_sale.scss
+++ b/addons/website_sale/static/src/scss/website_sale.scss
@@ -800,13 +800,10 @@ a.no-decoration {
     // bottom of the page.
     @include media-breakpoint-down(lg){
         .o_cta_navigation_container {
+            top: 100%;
+            bottom: auto !important;
             padding: 0 calc(var(--gutter-x) * .5);
         }
-    }
-
-    // TODO This height is arbitrary and the calculation should be improved.
-    .o_cta_navigation_placeholder {
-        height: o-to-rem(111px) + map-get($spacers, 4) + 2rem;
     }
 
     a.disabled {
